force-app/main/default/objects/Purchase_Order__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>