force-app/main/default/objects/Purchase_Order__c/fields/Bill_To_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Formula__c</fullName>
    <formula>Ware_House__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>