force-app/main/default/objects/Purchase_Order__c/fields/Billing_City_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_Formula__c</fullName>
    <formula>TEXT(Ware_House__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>