force-app/main/default/objects/Purchase_Order__c/fields/Billing_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Formula__c</fullName>
    <formula>Ware_House__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>