force-app/main/default/objects/Purchase_Order__c/fields/Billing_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Formula__c</fullName>
    <formula>Ware_House__r.State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>