force-app/main/default/objects/Purchase_Order__c/fields/Billing_Street_formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_formula__c</fullName>
    <formula>Ware_House__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>