force-app/main/default/objects/Purchase_Order__c/fields/Billing_Zip_Postal_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code_Formula__c</fullName>
    <formula>Ware_House__r.Zip_Postal_Code__c</formula>
    <label>Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>