force-app/main/default/objects/Purchase_Order__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <formula>Contact_person__r.Phone</formula>
    <label>Contact No</label>
    <type>Text</type>
</CustomField>