force-app/main/default/objects/Purchase_Order__c/fields/Contact_person__c.field-meta.xml
<CustomField>
    <fullName>Contact_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Name_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>