force-app/main/default/objects/Purchase_Order__c/fields/Customer_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Customer Name)</relationshipLabel>
    <relationshipName>Purchase_Orders_1</relationshipName>
    <type>Lookup</type>
</CustomField>