force-app/main/default/objects/Purchase_Order__c/fields/Delivery_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Domestic__c</fullName>
    <label>Delivery (Domestic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>