force-app/main/default/objects/Purchase_Order__c/fields/Freight_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Freight_Domestic__c</fullName>
    <label>Freight (Domestic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>