force-app/main/default/objects/Purchase_Order__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <formula>Customer_Name_Account__r.GSTIN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST No.</label>
    <type>Text</type>
</CustomField>