force-app/main/default/objects/Purchase_Order__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <label>GSTIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>