force-app/main/default/objects/Purchase_Order__c/fields/IGST_Domestic__c.field-meta.xml
<CustomField>
    <fullName>IGST_Domestic__c</fullName>
    <label>IGST (Domestic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>