force-app/main/default/objects/Purchase_Order__c/fields/Insurance_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Domestic__c</fullName>
    <label>Insurance (Domestic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>