force-app/main/default/objects/Purchase_Order__c/fields/Insurance_Import__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Import__c</fullName>
    <label>Insurance (Import)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>