force-app/main/default/objects/Purchase_Order__c/fields/Local_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Local_Supplier__c</fullName>
    <label>Local Supplier</label>
    <type>TextArea</type>
</CustomField>