force-app/main/default/objects/Purchase_Order__c/fields/Mode_of_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Shipping__c</fullName>
    <label>Mode of Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>