force-app/main/default/objects/Purchase_Order__c/fields/Payment_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Payment_Domestic__c</fullName>
    <label>Payment (Domestic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>