force-app/main/default/objects/Purchase_Order__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>