force-app/main/default/objects/Purchase_Order__c/fields/Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>Ref_Date__c</fullName>
    <label>Supplier Reference Date</label>
    <type>Date</type>
</CustomField>