force-app/main/default/objects/Purchase_Order__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <label>Supplier Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>