force-app/main/default/objects/Purchase_Order__c/fields/Ship_To_Formula__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Formula__c</fullName>
    <formula>Shipping_Ware_House__r.Name+ Shipping_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>