force-app/main/default/objects/Purchase_Order__c/fields/Shipping_City_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_Formula__c</fullName>
    <formula>Text(Shipping_Ware_House__r.City__c)  + Shipping_Customer__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>