force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Formula__c</fullName>
    <formula>Shipping_Customer__r.ShippingCountry +  Shipping_Ware_House__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>