force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Customer__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Shipping Customer)</relationshipLabel>
    <relationshipName>Purchase_Orders_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>