force-app/main/default/objects/Purchase_Order__c/fields/Shipping_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Formula__c</fullName>
    <formula>Shipping_Customer__r.ShippingState +  Shipping_Ware_House__r.State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>