force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Street_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Formula__c</fullName>
    <formula>Shipping_Customer__r.ShippingStreet+ Shipping_Ware_House__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>