force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <label>Shipping Terms</label>
    <type>TextArea</type>
</CustomField>