force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Ware House</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Purchase Orders (Shipping Ware House)</relationshipLabel>
    <relationshipName>Purchase_Orders_Shipping</relationshipName>
    <type>Lookup</type>
</CustomField>