force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Zip_Postal_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code_Formula__c</fullName>
    <formula>text(Shipping_Zip_Postal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>