force-app/main/default/objects/Purchase_Order__c/fields/Term_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Term_And_Conditions__c</fullName>
    <label>Term And Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>