force-app/main/default/objects/Purchase_Order__c/fields/Terms_and_Conditions_rich__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_rich__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>