force-app/main/default/objects/Purchase_Order__c/fields/UoI__c.field-meta.xml
<CustomField>
    <fullName>UoI__c</fullName>
    <label>UoI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>