force-app/main/default/objects/Purchase_Order__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Ware House</label>
    <referenceTo>Ware_House__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>