force-app/main/default/objects/Purchase_Order__c/validationRules/Shipping_Customer_Ware_House_Select.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Customer_Ware_House_Select</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( NOT(ISBLANK(Shipping_Customer__c)),NOT(ISBLANK(Shipping_Ware_House__c ))), 
true, False)</errorConditionFormula>
    <errorDisplayField>Ship_To__c</errorDisplayField>
    <errorMessage>Please select either Shipping Customer or Shipping Ware House</errorMessage>
</ValidationRule>