force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order_Number__c</columns>
    <columns>PO_Date__c</columns>
    <columns>Supplier__c</columns>
    <columns>Against__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>